# TextEditor

./: CMakeLists.txt
.github/workflows/: main.yml
TextEditorApplication/: main.cpp
TextEditorLibrary/: TString.cpp  TString.h  TextEditor.cpp  TextEditor.h
test/: CMakeLists.txt  test_TString.cpp
